--- a/src/css/Style.css
+++ b/src/css/Style.css
@@ -1,6 +1,21 @@
-#Square {
-   height: 100px;
-   width: 100px;
-   border: 2px solid black;
-   display: flex;
+.letter {
+  flex: 33%;
+  height: 100%;
+  border: 2px solid rgb(5, 4, 4);
+  margin: 3px;
+  display: grid;
+  place-items: center;
+  font-size: 30px;
+  color: rgb(5, 5, 5);
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+.grid{
+  width: 400px;
+  height: 400px;
+  border: 3px solid black;
+  display: grid;
+}
+
+
+
