--- a/src/css/Style.css
+++ b/src/css/Style.css
@@ -1,6 +1,6 @@
 .letter {
-  flex: 33%;
-  height: 100%;
+  height: 100px;
+  width: 100px;
   border: 2px solid rgb(5, 4, 4);
   margin: 3px;
   display: grid;
@@ -11,10 +11,12 @@
 }
 
 .grid{
-  width: 400px;
-  height: 400px;
-  border: 3px solid black;
-  display: grid;
+  height: 50px;
+  flex-direction: column;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 
