--- a/src/css/Style.css
+++ b/src/css/Style.css
@@ -1,25 +1,38 @@
 .letter {
-  height: 100px;
-  width: 100px;
+  height: 50px;
+  width: 50px;
   border: 2px solid rgb(5, 4, 4);
   margin: 3px;
-  display: grid;
-  place-items: center;
-  font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
   color: rgb(5, 5, 5);
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .grid{
+  
+  padding-right: 350px;
+  padding-left: 230px;
+  border: 300px;
   height: 50px;
   width: 50px;
-  flex-direction: column;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   min-height: 50px;
   align-items: center;
   flex-wrap: wrap;
+  flex:1;
+  
 }
+
+
+
+
+
 
 
 
